--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </h3>
                 <ul>
                     <li>
-                        hierot3yrit yewirt7yityer5 8t6yi4tyuiteroib 4tyuoyb eruygtvcceuitbc fudy5tgoub 4tgcugewtieg
+                        hierot3yrit yewirt7yityer5 8t6yi4tyu iteroib 4tyuoyb eruygtvcceuitbc fudy5tgoub 4tgcugewtieg
                     </li>
-                    <li>rftet7yh br87hyvr8o7tyuhifgdpve9brtygbvegu fgyvc8 g7tcwno8ds7 yfgtewh0tce hfuwstfybx 6i7yxdrh oijygd</li>
-                    <li>ertuvnoir ygthwd vjyfhy9tw o8eryiwtruq ywefgriugwtgri wgryutergfoe uigfudetgrf78yhdrfgedurt</li>
-                    <li>w5tfwertn87o q3er6q 93483 567gt ucegrtuyeyurfhksgf shdflsyuri8y gfsugsdkf gsurtrdiwhr cistf sfjgsudf </li>
-                    <li>sirybcie76y toweu rt gi[aikfl sdhfiyusnfksyfislfht uyeg kdgfudsytf gsurf thfia a ugf  a gatf sd  saf hfkyiaw dfq </li>
+                    <li>rftet7yh br87hyvr8o7 tyuhifgdpv e9brtygb vegu fgyvc8 g7tcwno8ds7 yfgtewh0tce hfuwstfybx 6i7yxdrh oijygd</li>
+                    <li>ertuvnoir ygthwd vjyfhy9tw o8eryiwtruq ywefgriugwtgri wgryute rgfoe uigfudetgrf7 8yhdrfgedurt</li>
+                    <li>w5tfwertn87o q3er6q 93483 567gt ucegrtuye yurfhksgf shdflsyuri8y gfsugsdkf gsurtrdiwhr cistf sfjgsudf </li>
+                    <li>sirybcie76y toweu rt gi[aikfl sdhfiyusnf ksyfislfht uyeg kdgfudsytf gsurf thfia a ugf  a gatf sd  saf hfkyiaw dfq </li>
                     <li>wtrcfrou  irhhygiy g hgdf ihq  uar0 wseur etfi jawfj  udygf iluggut oysi rufqitr fqwuer gf t h ds</li>
                 </ul>
             </section>
